# underactuated_project

./: CMakeLists.txt  Controller.cpp  Controller.hpp  FootstepPlan.cpp  FootstepPlan.hpp  ISMPC.cpp  ISMPC.hpp  README  TODO.txt  WorldNode.cpp  WorldNode.hpp  computeReferenceTrajectory.cpp  computeReferenceTrajectory.hpp  main.cpp  parameters.cpp  task.cpp  task.hpp  types.hpp  utils.cpp
plotters/: derive.m  plot  plot (copy)  plotMPC.m  plotReferenceVelocities  plot_feet  plot_feet.m  plot_joint_level  plot_solution.m  tracking.m
urdf/: hrp4.urdf
